<resources>
    <string name="app_name">Contact List</string>

    <string name="add_contact">Добавить контакт</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Email</string>
    <string name="ok">Ok</string>
    <string name="cancel">Отмена</string>

    <string name="error_wrong_uri">Неправильный URI: </string>
    <string name="error_insert">Ошибка при добавлении по URI: </string>
    <string name="error_email">Проверти email </string>
    <string name="error_name">Заполните имя </string>
</resources>
